# ML-Breast-Pred

./: README.md  pyproject.toml
app/: base_app.py  config.py  deployment_prep.ipynb  display_functions.py  shap_utils.py  utils.py
app/all_preds/: med_xgb.parquet  mort_lgbm.parquet  reop_xgb.parquet  surg_xgb.parquet  vte_xgb.parquet
app/bin_thresholds/: med_xgb.npz  mort_lgbm.npz  reop_xgb.npz  surg_xgb.npz  vte_xgb.npz
app/models/calibrated/: med_xgb.joblib  mort_lgbm.joblib  reop_xgb.joblib  surg_xgb.joblib  vte_xgb.joblib
app/preprocessors/: med_pipeline.joblib  mort_pipeline.joblib  reop_pipeline.joblib  surg_pipeline.joblib  vte_pipeline.joblib
app/shap_explainers/: mort.joblib  vte.joblib
notebooks/: 00_CPT_ICD_extract.ipynb  01_cleaning.ipynb  02_summary_analysis.ipynb  03_EDA.ipynb  04_preprocessing.ipynb  05_base_tuning.ipynb  06_nn_tuning.ipynb  07_stack.ipynb  08_calibrate.ipynb  09_eval.ipynb  10_sig_test.ipynb  11A_perm_imp.ipynb  11_feat_imp.ipynb  12_DCA.ipynb
src/: clean_filter.py  config.py  data_utils.py  eval.py  feat_importance.py  nn_model.py  preprocess.py  sav_convert.py  sig.py  summary_analysis.py  tune_base.py  tune_nn.py
